WIP: ##approach second analysis...

--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -87,13 +87,14 @@ For example, lower elevations may trap more seeds.
 
 We compared the frequency with which four groups of exotic conifers establish in various nature types, using observational data. 
 Specifically, we used observations of wildlings and nature types, mapped around sexually mature plantations from which the wildlings presumably originated.
-We analysed the data in two ways, to answer distinct questions about differences in establishment.
+We analysed the data in two ways, to answer distinct questions about patterns of wildling establishment.
 
-The first analysis was a simple tallying of the number of wildlings of each conifer per unit area of each nature type.
+The first analysis simply tallied of the number of wildlings of each conifer per unit area of each nature type.
 In this way, we summarized the state of wildling establishment from exotic conifer plantations under prevailing conditions.
-In the tallying analysis, variation in the density of wildlings from is partly attributable to differences between conifers and between nature types, and partly to contingent factors, such as the spatial distribution of nature types around plantations. 
-The motivation for this approach was to break down the realised spread of wildlings at the specific localities in the data set --- to give a picture of the current status of the naturalization process.
+In the tallying analysis, variation in the density of wildlings is partly attributable to differences between conifers and between nature types, and partly to contingent factors, such as the spatial distribution of nature types around plantations. 
+The motivation for this approach was descriptive: to break down the realised spread of wildlings at the specific localities in the data set.
 
+The second analysis modeled the number of wildlings per unit area... 
 We also estimated the relative number of seeds arriving at different locations within the mapped areas, by modeling seed dispersal from the plantations. 
 These elements comprised the conceptual model on which we based our analysis:   
 
